--- a/src/App.css
+++ b/src/App.css
@@ -127,13 +127,6 @@ input:focus, textarea:focus, select:focus {
 	}
 }
 
-p.success {
-	color: green;
-}
-
-p.danger {
-	color: red;
-}
 
 
  .App {
@@ -222,17 +215,17 @@ margin: 150px auto;}
   }
 
   .banner3 h1 {
-    font-size: 13vw; 
+    font-size: 18vw; 
   }
 
   .banner3 h2 {
-    font-size: 5vw; 
+    font-size:10vw; 
   }
 
   .container-star{
     margin: 70px auto;}
     
-    .star-icon{  width: 20px;}
+    .star-icon{  width: 40px;}
 }
 
 /*********************about*******************************/
@@ -310,26 +303,32 @@ transition: transform 0.3s ease;
 }
 
 @media (min-width: 481px) and ( max-width: 850px) {
+
+  .About-me {
+    width: 90%;
+    margin: auto;
+  }
+
   .About-me h3 {
-    font-size: 1em;
+    font-size: 1.2em;
     margin: 10px;
     padding: 20px;
     width: 100%;
   }
 
   .icon1{  
-    width: 6em;}
+    width: 9em;}
   
     
    .icon2{  
-    width: 2em;}
+    width: 24m;}
 
     .icon-button {
       margin-left: 20px ;
          }
 
          .translate-portfolio h4 {
-          font-size: 5.5em;
+          font-size: 7.5em;
         }
    }
 
@@ -340,19 +339,17 @@ transition: transform 0.3s ease;
      flex-direction: column;
      width: 100%;
      margin: auto;
-
    }
  
   .About-me h3 {
-     font-size: 0.7em;
+     font-size: 1em;
      margin: 10px;
      padding: 20px;
      width: 100%;
    }
  
   .translate-portfolio h4 {
-     font-size: 2.5em;
-     margin: 10px 0;
+     font-size: 4.5em;
    }
    .icon-button {
 margin: 10px auto;
@@ -360,11 +357,11 @@ margin: 10px auto;
   
     
  .icon1{  
-  width: 4em;}
+  width:10em;}
 
   
  .icon2{  
-  width: 1em;}
+  width: 4em;}
  }
 
 
@@ -480,19 +477,19 @@ transition:  2.5s ease;
       border-radius: 320px 320px 0% 0%;
     }
     .connect {
-      font-size: 4em;
+      font-size: 6em;
       margin-top: 50px;
       margin-bottom: 0;
     }
     .text-span-13,
     .text-span-6 {
-        font-size: 2em;
+        font-size: 2.5em;
       }
       .social-link {
-        font-size: 1.5em;
+        font-size: 1.7em;
         margin:  15px ;}
 
-        .scroll-top img{width: 70px}
+        .scroll-top img{width: 90px}
   }
   
 
@@ -505,7 +502,7 @@ transition:  2.5s ease;
     }
   
   .connect {
-      font-size: 2em;
+      font-size: 3.5em;
       margin-top: 50px;
 
     }
@@ -515,26 +512,26 @@ transition:  2.5s ease;
     }
   
     .social{
-      width: 50%;
+      width: 80%;
       margin: auto;
     display: flex;
   flex-direction: column;}
   .text-span-13,
   .text-span-6 {
-      font-size: 1.2em;
+      font-size: 1.7em;
     }
-    .text-span-link{font-size: 0.8em;}
+    .text-span-link{font-size: 1.3em;}
   
   .contact-me h3 {
-      font-size: 1.2em;
+      font-size: 2em;
     }
   
   .social-link {
-      font-size: 1em;
+      font-size: 1.8em;
       margin:  15px ;
     }
 
-    .scroll-top img{width: 50px}
+    .scroll-top img{width: 80px}
   }
 
 
@@ -725,7 +722,7 @@ width: 50%;
 @media ( max-width: 480px) {
 
   .letter{border: transparent;
-    width: 70%;
+    width: 80%;
     margin:20px 0;
     }
 
@@ -747,12 +744,12 @@ width: 50%;
         font-size: 2em;
         margin-bottom: 50px;}
   .letter h2{
-    font-size: 1.3em;
+    font-size: 1.8em;
     margin: 10px auto;}
     
     .letter p{
-      font-size: 1em;
-    width: 60%;
+      font-size: 1.2em;
+    width: 80%;
     margin: 60px auto;
 }
 .letter-1 h1{
@@ -763,10 +760,10 @@ width: 50%;
   .px-2 label{  text-align: left;
   margin-left: 20px;
   font-family: 'Centra';
-  font-size: 1.1em;
+  font-size: 1.3em;
   font-weight: 400;}
   .px-2 button{
-    font-size: 1em;
+    font-size: 1.3em;
   width: 50%;
   
   }
@@ -873,22 +870,22 @@ margin: auto;}
   .moreAboutMe img{width: 400px;}
 
 
-.moreAboutMe h3{font-size: 1.5em;
-width: 60%;
-margin: auto;}
+.moreAboutMe h3{font-size: 1.8em;
+width: 95%;
+margin: 50px auto;}
 
 .moreAboutMeH2 {     font-size: 5.5em;
   margin-left: 60px;
   width: 70%;
 }
 
-.button-view-projects { font-size: 0.5em;}
+.button-view-projects { font-size: 1em;}
 
 }
 
 
  
-@media (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 850px) {
   .moreAboutMe {
      width: 90%;
      display: flex;
@@ -896,15 +893,10 @@ margin: auto;}
    }
  
   .moreAboutMe img {
-     width: 300px;
+     width: 400px;
      margin: auto;
    }
  
-  .moreAboutMe h3 {
-     font-size: 1em;
-     width: 80%;
-     margin-top: 30px;
-   }
 
  }
   
@@ -912,16 +904,20 @@ margin: auto;}
  @media (max-width: 480px) {
 
   .moreAboutMe {
-     width: 95%;
-   }
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+  }
  
   .moreAboutMe img {
-     width: 200px;
+     width: 300px;
+     margin: 20px auto;
    }
  
   .moreAboutMe h3 {
-     font-size: 1em;
-     width: 90%;
+     font-size: 1.3em;
+     width: 95%;
+
    }
    .moreAboutMeH2{font-size: 3.5em;
   width: 90%;
@@ -948,7 +944,7 @@ margin-left: 20px;}
   font-size: 1em;
   margin-top: 5px;
 }
-.button-view-projects {    font-size: 0.5em;}
+.button-view-projects {    font-size: 0.8em;}
   }
 
 /**************PROJECTS*************************/
@@ -1094,30 +1090,31 @@ text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);} */
 .button-view-projects:hover{color: #E9DFCE;
 background-color: #1E2125;
 transition: .4s;}  
+
 @media (min-width: 481px) and ( max-width: 850px) {
 
-  .button-view-projects {    font-size: 0.5em;}
+  .button-view-projects {    font-size: 1em;}
 
 
 .web-proj-parallax2{
   margin: 60px auto;
 }
 .web-proj-parallax h3{
-font-size: 4em;
-transform: translate3d(-300px, 250%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+font-size: 6em;
+transform: translate3d(-200px, 250%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
 }
 .web-proj-parallax2 h3{
-font-size: 4em;
-transform: translate3d(400px, -172%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+font-size: 6em;
+transform: translate3d(300px, -172%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
 }
 .parallax-img2{
-  width: 500px;
-  height: 300px;
+  width: 600px;
+  height: 400px;
     }
 
     .parallax-img{
-      width: 500px;
-      height: 300px;
+      width: 600px;
+      height: 400px;
         }
 }
 
@@ -1126,27 +1123,27 @@ transform: translate3d(400px, -172%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY
 @media (max-width: 480px) {
   
 
-  .button-view-projects {    font-size: 0.4em;}
+  .button-view-projects {    font-size: 0.8em;}
 
   .web-proj-parallax2{
     margin: 60px auto;
   }
   .web-proj-parallax h3{
-  font-size: 2.5em;
-  transform: translate3d(-100px, 250%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+  font-size: 3.5em;
+  transform: translate3d(-50px, 250%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
   }
   .web-proj-parallax2 h3{
-  font-size: 2.5em;
-  transform: translate3d(200px, -172%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+  font-size: 3.5em;
+  transform: translate3d(100px, -172%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
   }
   .parallax-img2{
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
       }
   
       .parallax-img{
-        width: 300px;
-        height: 200px;
+        width: 350px;
+        height: 250px;
           }
  }
  
@@ -1283,7 +1280,7 @@ opacity: 0;
 
 
             
- .box-item img:hover{
+ .box-item:hover img{
    box-shadow: 0 5px 5px 0 #60606030,0 5px 5px 0 #60606030;
   transform: scale3d(1.1, 1.1, 2) rotate(-6deg);
   opacity: 1;
@@ -1299,7 +1296,7 @@ opacity: 0;
 @media (min-width: 481px) and ( max-width: 850px) {
 
   .box-projects{
-    width: 70%;
+    width: 80%;
    }
 
   .box-projects h1{ 
@@ -1327,14 +1324,9 @@ opacity: 0;
       text-align: left;
       }
 
-
-
-
-
-
       .box-item img{
         border-radius: 5px;
-        height: 140px;
+        height: 170px;
 
       }
 }
@@ -1346,33 +1338,105 @@ opacity: 0;
 }
 
   .box-projects h1{ 
-  font-size: 2em;
+  font-size: 3em;
   font-weight: 500;
   margin: 150px auto;}
 
   .box-item{border:1px solid #E9DFCE;
     border-radius: 5px;
     height: 250px;
-    margin:10px 0;
+    margin:100px 0;
   display: grid;
   width: 100%;
   grid-template-columns: auto 1fr ;
   grid-template-areas: 
-                        "empty title  "
+                        "image image "
+                        " empty title"
                         " empty tags"
-                        " empty image"
                         "empty site "
                       }
 
-.box-item img{height: 100px;
+.box-item img{height: 180px;
 width: auto;
-margin-top: -60px;}             
+margin-top: -60px;
+opacity: 1}
+
+.box-item:hover img {
+  box-shadow: none;
+  opacity: 1; 
+  transform: none;
+}
 .box-item h2{
-  font-size: 1.8em;
+  font-size: 2.2em;
   padding-top: 20px;
 }
 .box-item span{  padding-top: 20px;}
-.box-item .p h5{   font-size: 0.6em; }
+.box-item .p h5{   font-size: 0.8em; }
 .box-item .p{gap: 5px;}
-.box-item a{font-size: 0.6em; }
+.box-item a{font-size: 0.8em; 
+  margin-top: -40px;}
 }
+
+/*******************PAGE NOT FOUND***************/
+
+.page-not-found{background-color: #E9DFCE;
+  width: 100vw; 
+  height: 100vh; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page{
+  margin-top: -200px;
+}
+
+  .page h1{  font-family: 'Groovy', sans-serif;
+  font-size: 12em;
+  color: #1E2125;}
+
+  .page h2{
+    font-family: "Centra";
+    color: #1E2125;
+    margin-bottom: 120px;
+   }
+
+   .button-view-portfolio {
+    background-color: #1E2125;
+    color:  #E9DFCE;
+    font-family: 'Centra', sans-serif;
+    align-self: center;
+    padding: 1.3em 1.3em;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    border: 1px solid #E9DFCE;
+    border-radius: 100px;
+    text-decoration: none;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    transition: color 400ms;
+  }
+
+
+.button-view-portfolio:hover{color: #1E2125;
+background-color:  #E9DFCE;
+border: 1px solid #1E2125;
+transition: .4s;}
+
+
+
+@media (min-width: 481px) and ( max-width: 850px) {
+
+  .page h1{  font-size: 10em;}
+  .page h2{  font-size: 2em;}
+}
+
+
+@media (max-width: 480px) {
+
+  .page h1{  font-size: 8em;}
+  .page h2{  font-size: 1.5em;}
+}
+
