--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,7 @@ input:focus, textarea:focus, select:focus {
  .banner3 h1{ 
   font-family: 'Groovy', sans-serif !important ;
 color: #E9DFCE;
-font-size: 13vw;
+font-size: 12vw;
 font-weight: 500;}
 
  .banner3 h2{  font-family: 'Groovy', sans-serif !important ;
@@ -237,7 +237,7 @@ display: flex;
 flex-direction: row;}
 
 .About-me h3{
-  font-family: 'Groovy', sans-serif !important ;
+  font-family: "British" ;
 font-size: 1.3em;
 color: #E9DFCE;
 width: 70%;
@@ -407,11 +407,12 @@ padding: 20px;}
 
   
 .social-link {
-  font-family: 'Centra';
+  font-family: 'British';
   font-size: 2em;
   text-decoration: none;
   color: #1E2125;
   margin:0 50px;
+  font-weight: 600;
   position: relative; 
   transition: text-decoration 0.3s ease, letter-spacing 0.5s ease;
 }
@@ -779,8 +780,8 @@ display: flex;}
 
 .moreAboutMe img{width: 400px;}
 
-.moreAboutMe h3{font-size: 1.5em;
-  font-family: 'Groovy', sans-serif  ;
+.moreAboutMe h3{font-size: 1.3em;
+  font-family: "British" ;
   color: #F0E9E2;
 width: 60%;
 margin: auto;}
@@ -839,15 +840,14 @@ margin: auto;}
 .containerUL li {
   color: #F0E9E2;
   list-style: none;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: 500;
+  font-family: "Centra";
   font-size: 1.2em;
   margin-top: 5px;
 }
 
 .moreSkills h5 {
   color: #F0E9E2;
-  font-family: 'Centra';
+  font-family: 'British';
   font-size: 1.6em;
   margin-bottom: 50px;
 }
@@ -1281,8 +1281,8 @@ opacity: 0;
 
             
  .box-item:hover img{
-   box-shadow: 0 5px 5px 0 #60606030,0 5px 5px 0 #60606030;
-  transform: scale3d(1.1, 1.1, 2) rotate(-6deg);
+   /* box-shadow: 0 5px 5px 0 #60606030,0 5px 5px 0 #60606030; */
+  transform: scale3d(1.1, 1.1, 2) ;
   opacity: 1;
 }
 
