--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,7 @@ margin: 150px auto;}
 
 @media (min-width: 481px) and ( max-width: 850px) {
   .banner3 {
-    margin: 10vw auto; 
+    margin: 20vw auto; 
   }
 
   .banner3 h1 {
@@ -211,7 +211,7 @@ margin: 150px auto;}
 
 @media (max-width: 480px) {
   .banner3 {
-    margin: 15vw auto;
+    margin: 22vw auto;
   }
 
   .banner3 h1 {
@@ -673,9 +673,11 @@ transition: letter-spacing 0.3s ease;
   border: none !important; 
   background-color: transparent !important; 
 }
+#connect{margin-top:80px}
 
 @media (min-width: 481px) and ( max-width: 850px) {
 
+  #connect{margin-top:80px}
   .letter{border: transparent;;
     width: 70%;
     margin:60px auto;
@@ -735,6 +737,8 @@ width: 50%;
 }
 @media ( max-width: 480px) {
 
+
+  #connect{margin-top:80px}
   .letter{border: transparent;
     width: 80%;
     margin:20px 0;
@@ -928,7 +932,7 @@ margin: 50px auto;}
   .moreAboutMe h3 {
      font-size: 1.3em;
      width: 95%;
-     text-align: left;
+     text-align: center;
      margin: auto;
 
    }
@@ -972,50 +976,6 @@ margin-left: 20px;}
   width: 100%;
 margin: auto;}
 
-/* 
-.web-project img{z-index: 0;
-width: 700px;
-border-radius: 20px;
-transform: translateX(30%); 
-transition: transform 0.3s ease;}
-
-.web-project h3{ color: #F0E9E2;
-  font-family: 'Groovy', sans-serif  ;
-font-size: 6em;
-z-index: 1;
-will-change: transform;
-transform: translate3d(0px, -72.172%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-transform-style: preserve-3d;
-text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);} */
-
-
-
-/* .web-project0 h3{ color: #F0E9E2;
-  font-family: 'Groovy', sans-serif  ;
-  position: absolute;
-font-size: 6em;
-z-index: 1;
-will-change: transform;
-transform: translate3d(100px, -202.172%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-transform-style: preserve-3d;
-text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);}
-
-.web-project2{border: 1px solid blue;
-margin: 10px auto;}
-.web-project2 img{z-index: 0;
-width: 700px;
-border-radius: 20px;
-transform: translateX(-40%); 
-transition: transform 0.3s ease;}
-
-.web-project2 h3{ color: #F0E9E2;
-  font-family: 'Groovy', sans-serif  ;
-font-size: 6em;
-z-index: 1;
-will-change: transform;
-transform: translate3d(100px, -202.172%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-transform-style: preserve-3d;
-text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);} */
 
 .web-proj-parallax2{
   margin: 100px auto;
@@ -1066,20 +1026,7 @@ justify-content: end;
     z-index: 1;
     }
 
-/* .web-project3 img{z-index: 0;
-width: 700px;
-border-radius: 20px;
-transform: translateX(30%); 
-transition: transform 0.3s ease;}
 
-.web-project3 h3{ color: #F0E9E2;
-  font-family: 'Groovy', sans-serif  ;
-font-size: 6em;
-z-index: 1;
-will-change: transform;
-transform: translate3d(100px, -12.172%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-transform-style: preserve-3d;
-text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);} */
 
 
 
@@ -1177,11 +1124,15 @@ width: 100%;
 height: 100%;
 position:fixed;
 transition: transform 0.7s ease-in-out;
+
 }
 
 #NavCanvas{position: fixed;
 top: 0;
-right: 0;}
+right: 0;
+}
+
+
 
 
 #offcanvasNavbar .nav-link {
